tests/stderr-snapshots/integration__integration__mapfiles__intrinsic_jmp_non_consecutive_offset_time.snap
---
source: tests/integration/mapfiles.rs
expression: stderr
---
error: bad ABI for intrinsic CountJmp(): offset ('o') and time ('t') args must be consecutive
  ┌─ <mapfile-1>:3:5
  │
3 │ 300 tSo
  │     ^^^ signature defined here
4 │ !ins_intrinsics
5 │ 300 CountJmp()
  │     ^^^^^^^^^^ intrinsic defined here


